vamos finalizar hoje

--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
                         Nome: Darth Vader<br> Partido: Império<br> Vice-Prefeito: Darth Maul
                     </div>
                 </div>
-                <!--<div class="info-imagem">
+                <div class="info-imagem">
                     <div class="info-imagem-prefeito">
                         <img src="" alt="" /> Prefeito
                     </div>
                     <div class="info-imagem-vice">
                         <img src="" alt="" /> Vice-Prefeito
                     </div>
-                </div> -->
+                </div> 
             </div>
             <div class="instrucoes">
                 Aperte a tela:<br/> CONFIMA para CONFIRMAR este voto<br/> CORRIGE para REINICIAR este voto
