fix: finished exercises A and C

--- a/index.html
+++ b/index.html
@@ -25,10 +25,7 @@
                     <div class="info-voto-titulo">
                         <!-- Título da seção de voto -->
                         <span>SEU VOTO PARA</span>
-                    </div>
-                    <div class="info-voto-cargo">
-                        <!-- Cargo para o qual está votando -->
-                        <span>VEREADOR</span>
+                        <span class="info-voto-cargo">VEREADOR</span>
                     </div>
                     <div class="info-voto-numeros">
                         <!-- Contêiner para os números do voto -->
